--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ body {
   padding: 13px 13px;
 }
 
+.jscolor:focus, .jscolor:hover, .color:hover, .color:focus {
+  scale: 105%;
+}
+
 .color-changing-svg path {
   transition: fill 0.5s ease;
 }
