--- a/style2.css
+++ b/style2.css
@@ -72,6 +72,10 @@ body {
   padding: 13px 13px;
 }
 
+.jscolor:focus, .jscolor:hover, .color:hover, .color:focus {
+  scale: 105%;
+}
+
 .color-changing-svg path {
   transition: fill 0.5s ease;
 }
