--- a/style2.css
+++ b/style2.css
@@ -50,7 +50,7 @@ body {
   border: 2px solid #aaa;
 }
 
-.colors{
+.colors {
   display: flex;
 }
 
@@ -72,7 +72,10 @@ body {
   padding: 13px 13px;
 }
 
-.jscolor:focus, .jscolor:hover, .color:hover, .color:focus {
+.jscolor:focus,
+.jscolor:hover,
+.color:hover,
+.color:focus {
   scale: 105%;
 }
 
