--- a/style2.css
+++ b/style2.css
@@ -31,7 +31,7 @@ body {
   #product-shape3,
   #product-shape4,
   #product-shape5 {
-    fill: burlywood;
+    fill: #FFC2F0;
   }
 }
 
@@ -84,7 +84,7 @@ body {
 }
 
 .select {
-  border: solid 2px blanchedalmond;
+  border: solid 2px #FFC2F0;
 }
 
 h3 {
@@ -104,6 +104,8 @@ h3 {
   font-family: Arial, Helvetica, sans-serif;
   border-radius: 8px;
   border: solid 0.13rem #1d1d1b;
+  font-size: 1rem;
+  font-weight: bold;
   /* Couleur de la bordure mod */
 }
 
@@ -150,4 +152,34 @@ h3 {
 .container_boutons {
   display: flex;
   gap: 1rem;
+}
+
+.mt-2 {
+  margin-top: 1rem;
+}
+
+@font-face {
+  font-family: "Milimeter";
+  src:
+    local("Milimeter"),
+    url("Millimetre-Bold.otf") format("opentype"),
+}
+
+.font-title{
+  font-family: "Milimeter";
+  font-size: 2.5rem;
+}
+
+.font-med{
+  font-family: "Milimeter";
+  font-size: 1.5rem;
+}
+
+.font{
+  font-family: "Milimeter";
+}
+
+a:hover{
+ color:#FFC2F0;
+ cursor: pointer;
 }
